--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-	<script type="text/javascript" src="main.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bungee+Shade&family=Montserrat&family=Open+Sans&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -27,13 +26,13 @@
         </div>
         <div class="row">
             <div class="col-md-6 offset-md-4 mt-3">
-			    <button type="button" onclick= "myFunction()" id= "My excuse" class="btn btn-dark btn-lg">Presione aquíq</button>
+			    <button type="button" onclick= "myFunction()" id= "My excuse" class="btn btn-dark btn-lg">Presione aquí</button>
             </div>
         </div>
     </div>
 <script>
 function myFunction() {
-  alert(document.getElementById("My excuse").innerHTML);
+  alert (generadorExcusas ());
 }
 </script>
 
@@ -50,6 +49,7 @@ function myFunction() {
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
 			integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
 		</script>
+        <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
